[package]
name = "unexpected_cats"
version = "0.1.2"
authors = ["Kirill Konchenko <konchenko.k@gmail.com>"]
edition = "2018"


[dependencies]
redis = "*"
serde_json = "1.0"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.reqwest]
version = "0.10.7"
default-features = false
features = ["rustls-tls", "blocking", "json"]